# stw7088cem-bird-audio-ann

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.in  requirements.in
configs/: data.toml  unknown_acquisition.toml  unknown_audio.toml  unknown_selection.toml
configs/task1/: final.toml
configs/task2/: autoencoder.toml
scripts/: final_report_assets_frozen_adapter.py
src/bird_audio/: __init__.py  __main__.py  audio.py  cache_audit.py  cli.py  clip_cache.py  clip_selection.py  config.py  environment_tools.py  final_evaluation.py  final_evaluation_data.py  final_evaluation_gate.py  final_evaluation_inference.py  final_report_assets.py  hashing.py  io_utils.py  (+26 more)
tests/: test_audio.py  test_cache_audit.py  test_cli.py  test_clip_cache.py  test_clip_selection.py  test_config.py  test_final_evaluation.py  test_final_evaluation_data.py  test_final_evaluation_gate.py  test_final_evaluation_inference.py  test_final_report_assets.py  test_manifest.py  test_metadata.py  test_metadata_artifacts.py  test_models.py  test_paths.py  test_recovery_v2.py  test_release_v2_namespace.py  test_review.py  test_run_identity.py  test_secure_audio_download.py  test_signal.py  test_signal_contract.py  test_signal_smoke.py  test_splitting.py  test_task1_attribution.py  test_task1_final_metrics.py  test_task1_training.py  test_task2_metrics.py  test_task2_scoring.py  test_task2_training.py  test_text_policy.py  test_training_batching.py  test_training_data.py  test_unknown_acquisition.py  test_unknown_audio.py  test_unknown_clip_cache.py  test_unknown_planning.py
