[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bird-audio-coursework"
version = "0.1.0"
description = "Bird-call classification and novelty detection coursework"
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
  "torch==2.10.0",
  "torchvision==0.25.0",
  "numpy>=2.1,<2.3",
  "scipy>=1.14,<1.16",
  "librosa==0.11.0",
  "soundfile==0.14.0",
  "scikit-learn==1.7.2",
  "pandas>=2.2,<2.4",
  "matplotlib>=3.9,<3.11",
  "seaborn==0.13.2",
  "tqdm>=4.66,<5",
]

[project.scripts]
bird-audio = "bird_audio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
